--- a/src/SoundCharts.Explorer.MacOS/Main.storyboard
+++ b/src/SoundCharts.Explorer.MacOS/Main.storyboard
@@ -706,23 +706,28 @@
                                     <size key="minSize" width="24" height="25"/>
                                     <size key="maxSize" width="24" height="25"/>
                                 </toolbarItem>
-                                <toolbarItem implicitItemIdentifier="302C498B-65BB-408B-AAEF-7A127FB857EE" label="Toggle Sidebar" paletteLabel="Toolbar Sidebar" toolTip="Toggle sidebar" tag="-1" image="sidebar.left" catalog="system" bordered="YES" id="zHN-aa-SHe">
+                                <toolbarItem implicitItemIdentifier="302C498B-65BB-408B-AAEF-7A127FB857EE" label="Toggle Sidebar" paletteLabel="Toggle Sidebar" toolTip="Toggle sidebar" tag="-1" image="sidebar.left" catalog="system" bordered="YES" id="zHN-aa-SHe">
                                     <size key="minSize" width="30" height="25"/>
                                     <size key="maxSize" width="30" height="25"/>
+                                    <connections>
+                                        <action selector="OnToggleSidebar:" target="VdR-yd-tC9" id="61y-7w-OcE"/>
+                                    </connections>
                                 </toolbarItem>
-                                <toolbarItem implicitItemIdentifier="NSToolbarShowColorsItem" id="RFH-AV-Jyp"/>
-                                <toolbarItem implicitItemIdentifier="NSToolbarShowFontsItem" id="tXC-CE-KDU"/>
-                                <toolbarItem implicitItemIdentifier="NSToolbarPrintItem" id="Mf3-yt-2Bd"/>
+                                <toolbarItem implicitItemIdentifier="7E66B964-5704-4817-8451-C92B41A9F8E0" label="Preferences" paletteLabel="Preferences" tag="-1" image="gearshape" catalog="system" bordered="YES" id="KOJ-Gk-vxR">
+                                    <size key="minSize" width="28" height="25"/>
+                                    <size key="maxSize" width="28" height="25"/>
+                                    <connections>
+                                        <segue destination="Cjc-BZ-1O4" kind="show" id="QTd-r9-ooR"/>
+                                    </connections>
+                                </toolbarItem>
                                 <toolbarItem implicitItemIdentifier="NSToolbarSpaceItem" id="Z4O-V9-aPs"/>
                                 <toolbarItem implicitItemIdentifier="NSToolbarFlexibleSpaceItem" id="Dls-7W-HLD"/>
                             </allowedToolbarItems>
                             <defaultToolbarItems>
-                                <toolbarItem reference="RFH-AV-Jyp"/>
-                                <toolbarItem reference="tXC-CE-KDU"/>
-                                <toolbarItem reference="T8F-ab-SyT"/>
                                 <toolbarItem reference="zHN-aa-SHe"/>
+                                <toolbarItem reference="T8F-ab-SyT"/>
                                 <toolbarItem reference="Dls-7W-HLD"/>
-                                <toolbarItem reference="Mf3-yt-2Bd"/>
+                                <toolbarItem reference="KOJ-Gk-vxR"/>
                             </defaultToolbarItems>
                         </toolbar>
                         <connections>
@@ -996,8 +1001,12 @@
             <point key="canvasLocation" x="811" y="1740"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="QTd-r9-ooR"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="arrow.down.circle.fill" catalog="system" width="15" height="15"/>
+        <image name="gearshape" catalog="system" width="16" height="16"/>
         <image name="map.circle.fill" catalog="system" width="15" height="15"/>
         <image name="sidebar.left" catalog="system" width="18" height="14"/>
     </resources>
